Update weight and bias standardization for akka systems

--- a/reactive-deep-learning-akka-cluster/src/main/resources/application.conf
+++ b/reactive-deep-learning-akka-cluster/src/main/resources/application.conf
@@ -5,6 +5,7 @@ akka {
 
   remote {
     log-remote-lifecycle-events = off
+    system-message-buffer-size = 10000
     netty.tcp {
       hostname = "127.0.0.1"
       port = 0
