--- a/reactive-deep-learning-akka-cluster/src/main/resources/application.conf
+++ b/reactive-deep-learning-akka-cluster/src/main/resources/application.conf
@@ -5,7 +5,7 @@ akka {
 
   remote {
     log-remote-lifecycle-events = off
-    system-message-buffer-size = 10000
+    system-message-buffer-size = 100000
     netty.tcp {
       hostname = "127.0.0.1"
       port = 0
@@ -19,6 +19,7 @@ akka {
     ]
 
     auto-down-unreachable-after = 10s
+    auto-down = on
   }
 
   persistence {
