--- a/reactive-deep-learning-akka-cluster/src/main/resources/application.conf
+++ b/reactive-deep-learning-akka-cluster/src/main/resources/application.conf
@@ -3,6 +3,9 @@ akka {
     provider = "akka.cluster.ClusterActorRefProvider"
   }
 
+  loglevel = "DEBUG"
+  stdout-loglevel = "DEBUG"
+
   remote {
     log-remote-lifecycle-events = off
     system-message-buffer-size = 100000
